--- a/client/index.html
+++ b/client/index.html
@@ -154,7 +154,7 @@
     </div>
     
     <footer>
-        <p>RIFT 2026 Hackathon | Graph Theory Track | Team Name</p>
+        <p>RIFT 2026 Hackathon | Graph Theory Track | Team Dread</p>
         <p class="api-endpoint">API: <span id="apiEndpoint">/api/upload</span></p>
     </footer>
     
